# holocron

./: .gitignore  .mcp.json  CLAUDE.md  README.md  ZELLIJ-SETUP.md  install.sh  spec.md
.claude/: mcp.json
.claude/mcp-servers/tty-terminal/: README.md  TESTING.md  config.json  server.py  test-server.sh
.claude/skills/zellij/: SKILL.md  examples.md  pane-properties.md  pipes.md
configs/: default-config.yaml  zellij-analyze-keybinding.kdl  zellij-config.kdl
deprecated/: spec.md
plugins/pane-filter/: Cargo.toml  README.md  build.sh  methods.json.example  plugin.kdl
plugins/pane-filter/src/: config.rs  lib.rs  state.rs  ui.rs
scripts/: monitor-feedback.sh
src/layouts/: hyperpod.kdl
src/plugins/: BUILDING.md  build.sh
src/plugins/k8s-analyzer/: Cargo.toml  README.md
src/plugins/k8s-analyzer/src/: lib.rs  main.rs
src/scripts/: analyze-on-demand.sh  analyze-pane.sh  create-minikube-contexts.sh  setup.sh  test-setup.sh  watch-and-analyze.sh
